@startuml

title __ABSTRACTFACTORY's Class Diagram__\n

  namespace  {
    abstract class AbstractPersonFactory {
    }
  }
  

  namespace  {
    class BoyFactory {
    }
  }
  

  namespace  {
    class Canvas {
    }
  }
  

  namespace  {
    class GirlFactory {
    }
  }
  

  namespace  {
    class Main {
    }
  }
  

  BoyFactory -up-|> AbstractPersonFactory
  Canvas -up-|> javax.swing.JPanel
  Canvas o-- AbstractPersonFactory : boyFactory
  Canvas o-- AbstractPersonFactory : factory
  Canvas o-- AbstractPersonFactory : girlFactory -up-|> AbstractPersonFactory


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
